clusters/dev/apps/it-tools/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: it-tools
  namespace: default
spec:
  parentRefs:
    - name: it-tools-gateway   # must match with Gateway name
  hostnames:
    - it-tools.mihir.uk       # my domain
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: it-tools      # my service name
          port: 80
